# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  CPPLINT.cfg  ECS-UML.wsd  README.md  compile_commands.json  content  exec.sh  format.sh  log  r-type  vcpkg.json
Network/: CMakeLists.txt  Network.hpp  NetworkRType.hpp
Network/Client/: Client.cpp  Client.hpp  main.cpp
Network/Client/NetworkManager/: NetworkManager.cpp  NetworkManager.hpp
Network/ClientRType/: ClientRType.cpp  ClientRType.hpp
Network/Database/: Database.cpp
Network/GUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
Network/GUI/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  r-type-gui
Network/GUI/build_test/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Network/GUI/build_test/r-type-gui_autogen/: deps
Network/GUI/build_test/r-type-gui_autogen/EWIEGA46WW/: moc_MainWindow.cpp
Network/Lobby/: Lobby.hpp
Network/NetworkInterface/: ClientInterface.hpp  Connection.hpp  ServerInterface.hpp  message.hpp
Network/Server/: Server.cpp  Server.hpp
Network/Server/NetworkManager/: ServerNetworkManager.cpp  ServerNetworkManager.hpp
Network/ServerRType/: ServerRType.cpp  ServerRType.hpp
Network/VoiceChat/: VoiceChat.cpp  VoiceChat.hpp
src/Engine/: CMakeLists.txt
src/Engine/Core/: ClientGameEngine.cpp  ClientGameEngine.hpp  GameEngineBase.hpp  GameEngineConfig.hpp  LobbyManager.cpp  LobbyManager.hpp  LobbyState.hpp  ServerGameEngine.cpp  ServerGameEngine.hpp
src/Engine/Core/ECS/: Context.hpp  ECS.hpp  EcsType.hpp  ISystem.hpp
src/Engine/Core/ECS/Registry/: registry.cpp  registry.hpp
src/Engine/Core/ECS/SystemManager/: SystemManager.cpp  SystemManager.hpp
src/Engine/Core/Network/: Network.hpp
src/Engine/Core/Network/Client/: Client.cpp  Client.hpp
src/Engine/Core/Network/Database/: sqlite3.h
src/Engine/Core/Network/Lobby/: Lobby.hpp
src/Engine/Core/Network/NetworkInterface/: ClientInterface.hpp  Connection.hpp  MsgQueue.hpp  ServerInterface.hpp  message.hpp
src/Engine/Core/Network/Server/: Server.cpp  Server.hpp
src/Engine/Core/NetworkEngine/: NetworkEngine.cpp  NetworkEngine.hpp
src/Engine/Core/Scene/: LevelConfig.hpp  SceneLoader.hpp  SceneManager.hpp
src/Engine/Core/Voice/: VoiceManager.cpp  VoiceManager.hpp
src/Engine/Graphics/: WindowManager.cpp  WindowManager.hpp
src/Engine/Inputs/: ActionRegistry.cpp  ActionRegistry.hpp  InputAction.hpp  InputBinding.hpp  InputConfig.hpp  InputManager.cpp  InputManager.hpp  InputState.hpp  InputSystem.hpp
src/Engine/Inputs/InputManager/: ClientInputManager.cpp  ClientInputManager.hpp  InputManager.cpp  InputManager.hpp  InputManagerBase.cpp  InputManagerBase.hpp  ServerInputManager.cpp  ServerInputManager.hpp
src/Engine/Lib/Actors/: AActor.cpp  AActor.hpp  DynamicActor.cpp  DynamicActor.hpp  StaticActor.hpp
src/Engine/Lib/Components/: AudioComponent.hpp  ComponentSerializer.hpp  GravityComponent.hpp  GroundComponent.hpp  LobbyIdComponent.hpp  NetworkComponents.hpp  PredictionComponent.hpp  StandardComponents.hpp  tag_component.hpp
src/Engine/Lib/Components/Sprite/: AnimatedSprite2D.hpp  Sprite2D.hpp
src/Engine/Lib/Components/StructDatas/: Rect2D.hpp  RenderLayer.hpp  Vector2D.hpp
src/Engine/Lib/Components/serialize/: NetworkTraits.hpp  StandardComponents_serialize.hpp  (+3 more)
src/Engine/Lib/Environment/: Environment.hpp
src/Engine/Lib/Resources/: ressource_manager.hpp
src/Engine/Lib/Systems/: ActionScriptSystem.cpp  ActionScriptSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  BackgroundSystem.cpp  BackgroundSystem.hpp  CollisionSystem.cpp  CollisionSystem.hpp  DestructionSystem.cpp  DestructionSystem.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PlayerBoundsSystem.cpp  PlayerBoundsSystem.hpp  PredictionSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  ResourceSystem.cpp  ResourceSystem.hpp  ScrollSystem.cpp  ScrollSystem.hpp  SpawnSystem.cpp  SpawnSystem.hpp
src/Engine/Lib/Utils/: LobbyUtils.hpp
src/Engine/Resources/: ClientResourceManager.hpp  ResourceConfig.hpp  ResourceManagerBase.hpp  ServerResourceManager.hpp  ressource_manager.hpp
src/RType/Client/: CMakeLists.txt  main.cpp
src/RType/Common/: CMakeLists.txt  main.cpp
src/RType/Common/Components/: Components.hpp  LevelTransitionComponent.hpp  ai_behavior_component.hpp  behavior_component.hpp  boss_component.hpp  charged_shot.hpp  config.cpp  config.hpp  damage.cpp  damage.hpp  damage_component.hpp  game_over_notification.hpp  game_timer.hpp  health.cpp  health.hpp  last_damage_dealer.hpp  leaderboard_component.hpp  mob_component.hpp  pod_component.hpp  powerup_component.hpp  scripted_spawn.hpp  shooter.cpp  shooter.hpp  shooter_component.hpp  spawn.cpp  spawn.hpp  spectator_component.hpp  status_display_components.hpp  team_component.hpp  terrain_component.hpp
src/RType/Common/Scene/: ScenePrefabs.hpp
src/RType/Common/Systems/: UISystem.cpp  UISystem.hpp  ai_behavior.cpp  ai_behavior.hpp  animation_helper.hpp  behavior.cpp  behavior.hpp  boss_patterns.cpp  boss_patterns.hpp  boss_system.cpp  boss_system.hpp  boss_tail.cpp  boss_tail.hpp  damage.cpp  damage.hpp  game_state_system.cpp  game_state_system.hpp  health.cpp  health.hpp  leaderboard_system.cpp  leaderboard_system.hpp  level_transition.cpp  level_transition.hpp  pod_system.cpp  pod_system.hpp  powerup.cpp  powerup.hpp  projectile_cleanup.cpp  projectile_cleanup.hpp  score.cpp  score.hpp  shooter.cpp  shooter.hpp  spawn.cpp  spawn.hpp  status_display.cpp  status_display.hpp  wall_collision.cpp  wall_collision.hpp
src/RType/Server/: CMakeLists.txt  main.cpp
src/Smash/: CMakeLists.txt  main.cpp
src/Smash/GameManager/: GameManager.cpp  GameManager.hpp
src/Smash/Lib/: EjectionSystem.cpp  EjectionSystem.hpp  PercentageHealth.hpp  ProjectileComponent.hpp
src/Smash/Player/: Player.cpp  Player.hpp
test_input/: CMakeLists.txt  main_test_input.cpp
tests/: CMakeLists.txt  main_tests.cpp  test_collision.cpp  test_damage.cpp  test_health.cpp  test_hierarchy.cpp  test_network_manager.cpp  test_pattern.cpp  test_scroll.cpp  test_shooter.cpp  test_spawn.cpp
(+270 files in other folders)
